--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@azure/msal-browser": "^4.15.0",
     "@azure/msal-react": "^3.0.15",
+    "@fluentui/react": "^8.123.6",
     "@upstash/redis": "^1.28.4",
     "lucide-react": "^0.344.0",
     "pkce-challenge": "^5.0.0",
@@ -19,10 +20,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.7.0",
-    "vite": "^7.0.6",
-    "vite-plugin-svgr": "^4.3.0",
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
-    "autoprefixer": "^10.4.19"
+    "tailwindcss": "^3.4.1",
+    "vite": "^7.0.6",
+    "vite-plugin-svgr": "^4.3.0"
   }
 }
